--- a/CM 1015 Computational Mathematics/02-series-and-sequence.Rmd
+++ b/CM 1015 Computational Mathematics/02-series-and-sequence.Rmd
@@ -73,7 +73,7 @@ Such sequence is called arithmetic progression or arithmetic sequence.
 
 \vspace{5mm}
 
-\noindent Some sequences continue indefinitely, these are called infinite sequences/ It can happen that as we move along the sequence, the term get closer and closer to a fixed value. For example, $1,\frac{1}{2},\frac{1}{3},\frac{1}{4},\frac{1}{5}, \dots$.\newline
+\noindent Some sequences continue indefinitely, these are called infinite sequences. It can happen that as we move along the sequence, the term get closer and closer to a fixed value. For example, $1,\frac{1}{2},\frac{1}{3},\frac{1}{4},\frac{1}{5}, \dots$.\newline
 This sequence can be rewritten in the form of:
 
 \begin{equation}\label{eq3}
